improved styles, navbar to postition fixed instead of stick, body no longer needs to be full to push navbar toward buttom, fixed is better than absolute as it also prevents overflow of content from appearing under the navbar, applied postion fixed to the modals so if screen scrolls, the modals stay in the view port window of the browser. very nice

--- a/globalComponents/navBar/navBar.css
+++ b/globalComponents/navBar/navBar.css
@@ -1,5 +1,5 @@
 .navBar {
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     z-index: 9999;
     width: 100%;
